--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -16,13 +16,13 @@
       <div id="circle-cursor"></div>
         <div class="sidenav">
           <div class="logo">
-            <p href="./../../Home/index.html">
+            <a href="./../../Home/index.html">
                 <img src="./../../imgs/logo_1.png" class="logo_1" alt="logo top">
-            </p>
+            </a>
     
-            <p href="./../../Home/index.html">
+            <a href="./../../Home/index.html">
                 <img src="./../../imgs/logo_2.png" class="logo_2" alt="logo bottom">
-            </p>
+            </a>
             </div>
             <a href="../../Resume/Resume.html">Resume</a>
             <a href="../../Contact/Contact.html">Contact</a>
@@ -42,61 +42,61 @@
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/love at first sight.jpeg" style="width:100%">
-      <div class="text"><i>love at first sight</i></div>
+      <div class="text"><i><span class="typewriter">love at first sight</span></i></div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel one.jpeg" style="width:100%">
-      <div class="text"><i>Listen To Her Buzz</i>(1)</div>
+      <div class="text"><i><span class="typewriter">Listen To Her Buzz</span></i>(1)</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel two.jpeg" style="width:100%">
-      <div class="text"><i>Listen To Her Buzz</i>(2)</div>
+      <div class="text"><i><span class="typewriter">Listen To Her Buzz</span></i>(2)</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/table set. attendees TBD.jpeg" style="width:100%">
-      <div class="text"><i>table set. attendees TBD.</i></div>
+      <div class="text"><i><span class="typewriter">table set. attendees TBD.</span></i></div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/BREATH.jpeg" style="width:100%">
-        <div class="text"><i>BREATH</i></div>
+        <div class="text"><i><span class="typewriter">BREATH</span></i></div>
       </div>
 
     <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/Inner Voice.jpeg" style="width:100%">
-        <div class="text"><i>Inner Voice</i></div>
+        <div class="text"><i><span class="typewriter">Inner Voice</span></i></div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/SPEAK!.jpeg" style="width:100%">
-        <div class="text"><i>SPEAK!</i></div>
+        <div class="text"><i><span class="typewriter">SPEAK!</span></i></div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/Cleansing_ panel 1.jpeg" style="width:100%">
-        <div class="text"><i>Cleansing</i>(1)</div>
+        <div class="text"><i><span class="typewriter">Cleansing</span></i>(1)</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/Cleansing_ panel two.jpeg" style="width:100%">
-        <div class="text"><i>Cleansing</i>(2)</div>
+        <div class="text"><i><span class="typewriter">Cleansing</span></i>(2)</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="../img/Cleansing_ panel three.JPG" style="width:100%">
-        <div class="text"><i>Cleansing</i>(3)</div>
+        <div class="text"><i><span class="typewriter">Cleansing</span></i>(3)</div>
       </div>
   
   
