--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -46,7 +46,7 @@
     <div class="welcome">
         <ul>
             <h1 class="line-1">HELLO THERE, </h1>
-            <h1 class="line-2">I'm Gemma, an artist from Toronto, based in New York.</h1>
+            <h1 class="line-2">I'm Gemma Liang, an artist from Toronto, based in New York.</h1>
             <h1 class="line-3"> I am currently studying at NYU in the Integrated Design and Media program 
                 with a focus on UX/UI design.</h1>
             <h1 class="line-4">On my website you will find much of my 
