--- a/Directory/Midterm/Projects/Mediums/acrylic.html
+++ b/Directory/Midterm/Projects/Mediums/acrylic.html
@@ -26,7 +26,7 @@
             <a href="../../Resume/Resume.html">Resume</a>
             <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <a href="../../Projects.html">Projects</a>
+                <a href="../Projects.html">Projects</a>
                 <p><a href="./pencil.html" class="medium">Pencil</a></p>
                 <p><a href="./acrylic.html" class="medium">Arcylic Painting</a></p>
                 <p><a href="./photography.html" class="medium">Photography</a></p>
