--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -31,14 +31,15 @@
     </div>
     
     <!-- <a href="#" class="btn btn-seven w-inline-block"><div><span>Gemma Liang</span></div></a> -->
-    <a href="../Resume/Resume.html">Resume</a>
-    <a href="../Contact/Contact.html">Contact</a>
-    <div class="Projects-container">
-        <a href="../Projects/Projects.html">Projects</a>
-        <p><a href="../Projects/Mediums/pencil.html" class="medium">Pencil</a></p>
-        <p><a href="../Projects/Mediums/acrylic.html" class="medium">Arcylic Painting</a></p>
-        <p><a href="../Projects/Mediums/photography.html" class="medium">Photography</a></p>
+    <a href="../Resume/Resume.html"><span>Resume</span></a>
+<a href="../Contact/Contact.html"><span>Contact</span></a>
+<div class="Projects-container">
+    <a href="../Projects/Projects.html"><span>Projects</span></a>
+    <p><a href="../Projects/Mediums/pencil.html" class="medium"><span>Pencil</span></a></p>
+    <p><a href="../Projects/Mediums/acrylic.html" class="medium"><span>Acrylic Painting</span></a></p>
+    <p><a href="../Projects/Mediums/photography.html" class="medium"><span>Photography</span></a></p>
 </div>
+
   </div>
   
   <!-- Page content -->
